--- a/Interfaz pagina web/GESOC_Login.css
+++ b/Interfaz pagina web/GESOC_Login.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #c1bdba;
+  background: #85c3e5;
   font-family: 'Titillium Web', sans-serif;
 }
 
@@ -22,8 +22,9 @@ a:hover {
 }
 
 .form {
-  background: rgba(31, 19, 47, 0.9);
+  background: #9c313f;
   padding: 50px;
+  padding-top: 30px;
   max-width: 600px;
   margin: 40px auto;
   border-radius: 4px;
@@ -55,7 +56,7 @@ a:hover {
   transition: .5s ease;
 }
 .tab-group li a:hover {
-  background: #da8617;
+  background: rgba(199, 124, 26, 0.808);
   color: #ffffff;
 }
 .tab-group .active a {
@@ -71,15 +72,15 @@ h1 {
   text-align: center;
   color: #ffffff;
   font-weight: 300;
-  margin: 0 0 40px;
+  margin: 0 0 25px;
 }
 
 h2 {
   text-align: left;
   color: #ffffff;
   font-weight: 300;
-  margin: 0 0 40px;
-}ss
+  margin: 0 0 25px;
+}
 
 label {
   position: absolute;
@@ -99,8 +100,8 @@ label .req {
 }
 
 label.active {
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
+  -webkit-transform: translateY(-50px);
+          transform: translateY(-16px);
   left: 2px;
   font-size: 14px;
 }
@@ -138,7 +139,7 @@ textarea {
 
 .field-wrap {
   position: relative;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
 }
 
 .top-row:after {
@@ -180,7 +181,96 @@ textarea {
   width: 100%;
 }
 
+.button-block:hover,
+.button-block:focus,
+.button-block:active,
+.button-block.active,
+.open .dropdown-toggle.button-block {
+    border-color: #da8617;
+    border-width: thick;
+    color: rgb(255, 255, 255);
+    background-color: rgb(201, 119, 11);
+    cursor: pointer;
+}
+
+.button-back{
+  margin-bottom: 10px;
+  display: block;
+  font-size: large;
+  width: 100%;
+  top: 20px;
+}
+
+.button-back:hover,
+.button-back:focus,
+.button-back:active,
+.button-back.active,
+.open .dropdown-toggle.button-back {
+    border-color: #da8617;
+    border-width: thick;
+    color: rgb(255, 255, 255);
+    background-color: rgb(201, 119, 11);
+    cursor: pointer;
+}
+
 .forgot {
   margin-top: -20px;
   text-align: right;
+}
+
+/* empieza lo del combo box */
+/* The container must be positioned relative: */
+.custom-select {
+  position: relative;
+  font-family: Arial;
+}
+
+.select-selected {
+  background-color: DodgerBlue;
+}
+
+/* Style the arrow inside the select element: */
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/* Point the arrow upwards when the select box is open (active): */
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/* style the items (options), including the selected item: */
+.select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
+
+/* Style items (options): */
+.select-items {
+  position: absolute;
+  background-color: DodgerBlue;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/* Hide the items when the select box is closed: */
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
 }
