Pantalla de listado x categoria

--- a/Interfaz pagina web/GESOC_Login.css
+++ b/Interfaz pagina web/GESOC_Login.css
@@ -8,7 +8,8 @@ html {
 
 body {
   background: #85c3e5;
-  background-image: url(https://blog.visualkgroup.com/wp-content/uploads/2019/01/gestion-empresarial-erp-crm-bi-870x435.jpg);
+  background-image: url(https://hipertextual.com/files/2015/04/gestion-proyectos.jpg);
+  /*background-repeat: no-repeat;*/
   font-family: 'Titillium Web', sans-serif;
 }
 
