--- a/TPGESOC/src/main/resources/templates/GESOC_Login.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_Login.hbs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>REGISTRARSE/INICIAR SESIÓN</title>
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./GESOC_Login.css">
+<link rel="stylesheet" href="./css/GESOC_Login.css">
 
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
-            <a class="navbar-brand page-scroll" href="./GESOC_Menu.html">GESOC</a>
+            <a class="navbar-brand page-scroll" href="/">GESOC</a>
         </div>
 </nav>
 
@@ -22,11 +22,11 @@
 <!-- partial:index.partial.html -->
 <div class="form">
       
-  <button type="submit" class="button button-back" onclick="window.location.href='./GESOC_Menu.html'">Volver al menú principal</button>
+  <button type="submit" class="button button-back" onclick="window.location.href='./'">Volver al menú principal</button>
   
   <ul class="tab-group">
         
-        <li class="tab active"><a href="#signupEJ">Registrar Entidad Jurídica</a></li>
+        <li class="tab"><a href="#signupEJ">Registrar Entidad Jurídica</a></li>
         <li class="tab"><a href="#signupEB">Registrar Entidad Base</a></li>
         <li class="tab"><a href="#login">Iniciar <br> Sesión</a></li>
       </ul>
@@ -34,8 +34,8 @@
       <div class="tab-content">
         <div id="signupEJ">   
           <h1>¡Registrate gratis!</h1>
-          
-          <form action="/" method="post">
+
+          <form class="" {{#if empresa}} action="//{{empresa.id}}" method="post" {{else}} action="/menu_logueado" method="post" {{/if}} style="">
           
           <h2>Datos de la entidad</h2>
             
@@ -51,7 +51,7 @@
               <label>
                 Razón social<span class="req">*</span>
               </label>
-              <input type="text" required autocomplete="off" id="razonsocial"/>
+                <input type="text" name="razonSocial" {{#if empresa}} value="{{empresa.RazonSocial}}" {{/if}} class="input-datos" >
             </div>
           </div>
           
@@ -80,23 +80,32 @@
               </label>
               <input type="text"required autocomplete="off" id="cantpersonal"/>
             </div>
-          
-            <div class="field-wrap">
-              <label>
-                Cant. ventas anuales<span class="req">*</span>
-              </label>
-              <input type="text" required autocomplete="off" id="cantventas"/>
-            </div>
-          </div>
-       
-            <div class="field-wrap">
-              <label>
-                Ingreso de ventas anuales<span class="req">*</span>
-              </label>
-              <input type="text"required autocomplete="off" id="ingventas"/>
+
+              <!-- <div class="field-wrap">
+                <label>
+                  Cant. ventas anuales<span class="req">*</span>
+                </label>
+                <input type="text" required autocomplete="off" id="cantventas"/>
+              </div>
             </div>
 
-          <!-- TODO: poner al lado del tipo de entidad -->
+              <div class="field-wrap">
+                <label>
+                  Ingreso de ventas anuales<span class="req">*</span>
+                </label>
+                <input type="text"required autocomplete="off" id="ingventas"/>
+              </div>
+              -->
+
+              <div class="field-wrap">
+                <label>
+                  Prom. ventas anuales<span class="req">*</span>
+                </label>
+                <input type="text" required autocomplete="off" id="promedio"/>
+              </div>
+            </div>
+
+            <!-- TODO: poner al lado del tipo de entidad -->
 
           <div class="field-wrap">
             <div class="custom-select" style="width:200px;">
@@ -192,7 +201,7 @@
             <input type="password"required autocomplete="off"/>
           </div>
 
-          <button type="submit" id="startbutton" class="button button-back" onclick="verify()" onclick="window.location.href='./GESOC_Menu_Logueado.html'">Inicia tu experiencia en GESOC</button>
+          <button type="submit" class="button button-back" onclick="window.location.href='./menu_logueado'">Inicia tu experiencia en GESOC</button>
 
           <!--Enable textbox according to previus select in combobox and enable button once textboxs filled-->
 
@@ -212,12 +221,13 @@
           </form>
 
         </div>
+        </div>
 
         <div class="tab-content">
           <div id="signupEB">   
             <h1>¡Registrate gratis!</h1>
-            
-            <form action="/" method="post">
+
+              <form class="" {{#if empresa}} action="//{{empresa.id}}" method="post" {{else}} action="/menu_logueado" method="post" {{/if}} style="">
             
             <h2>Datos de la entidad</h2>
               
@@ -323,8 +333,8 @@
               </label>
               <input type="password"required autocomplete="off"/>
             </div>
-  
-            <button type="submit" id="startbutton" class="button button-back" onclick="verify()" onclick="window.location.href='./GESOC_Menu_Logueado.html'">Inicia tu experiencia en GESOC</button>
+
+            <button type="submit" class="button button-back" onclick="window.location.href='./menu_logueado'">Inicia tu experiencia en GESOC</button>
   
             <!--Enable textbox according to previus select in combobox and enable button once textboxs filled-->
   
@@ -342,9 +352,9 @@
             </script>
   
             </form>
-  
+           </div>
           </div>
-        
+        <div class="tab-content">
         <div id="login">   
           <h1>¡Te echamos de menos!</h1>
           
@@ -366,7 +376,7 @@
           
           <p class="forgot"><a href="#">¿Olvidaste tu constraseña?</a></p>
           
-          <button type="submit" class="button button-back" onclick="window.location.href='./GESOC_Menu_Logueado.html'">Iniciar Sesión</button>
+          <button type="submit" class="button button-back" onclick="window.location.href='./menu_logueado'">Iniciar Sesión</button>
           
           </form>
 
@@ -376,7 +386,7 @@
       
 </div> <!-- /form -->
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./GESOC_Login.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./js/GESOC_Login.js"></script>
 
 </body>
 </html>
