--- a/TPGESOC/src/main/resources/public/css/GESOC_Cambiar_Usuario.css
+++ b/TPGESOC/src/main/resources/public/css/GESOC_Cambiar_Usuario.css
@@ -8,7 +8,7 @@ html {
 
 body {
   background: #85c3e5;
-  background-image: url(https://hipertextual.com/files/2015/04/gestion-proyectos.jpg);
+  background-image: url(https://www.esan.edu.pe/conexion/actualidad/2019/02/26/765x430_organizar_entregables.jpg);
   /*background-repeat: no-repeat;*/
   font-family: 'Titillium Web', sans-serif;
 }
