--- a/TPGESOC/src/main/resources/templates/GESOC_Login.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_Login.hbs
@@ -44,14 +44,14 @@
               <label>
                 Nombre Ficticio<span class="req">*</span>
               </label>
-              <input type="text" required autocomplete="off" id="NombreFicticio" name="NombreFicticio"  class="input-datos" {{#if empresa}}value="{{empresa.NombreFicticio}}" {{/if}}>
+              <input type="text" required autocomplete="off" id="NombreFicticio" name="NombreFicticio">
             </div>
 
             <div class="field-wrap">
               <label>
                 Razón social<span class="req">*</span>
               </label>
-                <input type="text" required autocomplete="off" id="RazonSocial" name="RazonSocial"  class="input-datos" {{#if empresa}}value="{{empresa.RazonSocial}}" {{/if}}>
+                <input type="text" required autocomplete="off" id="RazonSocial" name="RazonSocial">
             </div>
           </div>
           
