--- a/TPGESOC/src/main/resources/public/css/GESOC_Menu_Logueado.css
+++ b/TPGESOC/src/main/resources/public/css/GESOC_Menu_Logueado.css
@@ -134,7 +134,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-xl {
     border-color: #da8617;
     border-width: thick;
-    color: rgb(255, 255, 255);
+    color: #000;
     background-color: #fff;
 }
 
@@ -161,7 +161,10 @@ fieldset[disabled] .btn-xl:active,
 fieldset[disabled] .btn-xl.active {
     border-color: #1ee2e7;
     background-color: #1ee2e7;
+    color: #000;
 }
+
+a.page-scroll:hover {color:#fff !important}
 
 .btn-xl .badge {
     color: #fed136;
@@ -465,4 +468,25 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #1ee2e7;
+}
+
+
+a.navbar-brand{
+    font-size: 30px !important;
+}
+
+a.page-scroll{
+    border: 21px #fe0303 !important;
+    font-size: 16px;
+    background: #da171770;
+    border-radius: 5%;
+}
+
+a.navbar-brand:hover{
+    color: #ffffff !important
+}
+
+a.page-scroll:hover, a.page-scroll:focus {
+    color:rgb(226, 226, 226) !important;
+    background-color: #da1717af !important;
 }
