--- a/TPGESOC/src/main/resources/templates/GESOC_ListadoxCategoria.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_ListadoxCategoria.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>GESOC - Visualizar Ingresos y Egresos por Categoria</title>
-  <link rel="stylesheet" href="./css/GESOC_ListadoxCategoria.css">
+  <link rel="stylesheet" href="/css/GESOC_ListadoxCategoria.css">
 
 </head>
 <body>
