--- a/TPGESOC/src/main/resources/templates/GESOC_CargaEgresos.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_CargaEgresos.hbs
@@ -5,7 +5,7 @@
   <title>REGISTRARSE/INICIAR SESIÓN</title>
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./css/GESOC_CargarEgresos.css">
+  <link rel="stylesheet" href="/css/GESOC_CargarEgresos.css">
 </head>
 
 <body>
