--- a/TPGESOC/src/main/resources/templates/GESOC_Menu_Logueado.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_Menu_Logueado.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./css/GESOC_Menu_Logueado.css">
+    <link rel="stylesheet" type="text/css" href="/css/GESOC_Menu_Logueado.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://startbootstrap.com/templates/agency/font-awesome-4.1.0/css/font-awesome.min.css">
