ANDA EL CAMBIAR_USUARIO

--- a/TPGESOC/src/main/resources/templates/GESOC_Login.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_Login.hbs
@@ -206,7 +206,7 @@
               <input type="password"required autocomplete="off" id="Password" name="password" class="input-datos"/>
           </div>
 
-          <button type="submit" class="button button-back" onclick="window.location.href='./menu_logueado'">Inicia tu experiencia en GESOC</button>
+          <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">Inicia tu experiencia en GESOC</button>
 
           <!--Enable textbox according to previus select in combobox and enable button once textboxs filled-->
 
