--- a/TPGESOC/src/main/resources/templates/GESOC_Menu_Logueado.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_Menu_Logueado.hbs
@@ -28,7 +28,7 @@
                 </li>
 
                 <li class="">
-                    <a class="page-scroll" href="./menu_login">Cerrar Sesión</a>
+                    <a class="page-scroll" href="/menu_login">Cerrar Sesión</a>
                 </li>
             </ul>
         </div>
