--- a/TPGESOC/src/main/resources/templates/GESOC_CargaEgresos.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_CargaEgresos.hbs
@@ -161,14 +161,14 @@
             </div>
     
           
-            <button type="submit" class="button button-back" onclick="window.location.href='./menu_logueado'">Listo</button>
+            <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">Listo</button>
 
           </form>
 
 
 </div>
 
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./js/GESOC_CargarEgresos.js"></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="/js/GESOC_CargarEgresos.js"></script>
 
     </body>
 </div>
