--- a/TPGESOC/src/main/resources/templates/GESOC_ListadoxCategoria.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_ListadoxCategoria.hbs
@@ -14,7 +14,7 @@
   <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header page-scroll">
-          <a class="navbar-brand page-scroll" href="./menu_logueado">GESOC</a>
+          <a class="navbar-brand page-scroll" href="/menu_logueado">GESOC</a>
       </div>
 </nav>
 
@@ -61,7 +61,7 @@
   </section>
 </main>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js'></script><script  src="./js/GESOC_ListadoxCategoria.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js'></script><script  src="/js/GESOC_ListadoxCategoria.js"></script>
 
 </body>
 </html>
