--- a/TPGESOC/src/main/resources/public/css/GESOC_CargarProductos.css
+++ b/TPGESOC/src/main/resources/public/css/GESOC_CargarProductos.css
@@ -81,15 +81,17 @@ h1 {
 
 h2 {
   text-align: left;
-  color: #000000;
+  color: #ffffff;
   font-weight: 300;
   margin: 0 0 25px;
 }
 
 table {
     width: 100%;
+    height: 40px;
+    Overflow-y:scroll; //add vertical bar option in html
 }
-  
+
 th {
     height: 50px;
     background-color: #ebb609;
@@ -105,6 +107,16 @@ td {
 
 td, th{
   border-bottom: 1px solid #ddd;   
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#div1{
+overflow-y:scroll;
+     height:200px;
+     width:500px;
 }
 
 table, th, td {
