--- a/TPGESOC/src/main/resources/templates/GESOC_CargaEgresos.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_CargaEgresos.hbs
@@ -31,6 +31,8 @@
         <button class="tablinks" onclick="openCity(event, 'agregar producto')">Agregar Productos</button>
         <button class="tablinks" onclick="openCity(event, 'usuarios revisores')">Usuarios Revisores</button>
         <button class="tablinks" onclick="openCity(event, 'presupuesto')">Presupuesto</button>
+        <button class="tablinks" onclick="openCity(event, 'documento')">Documentos</button>
+        <button class="tablinks" onclick="openCity(event, 'informacion_adicional')">Informacion Adicional</button>
     </div>
 
     <div id="agregar producto" class="tabcontent">
@@ -142,7 +144,7 @@ tr:nth-child(even) {background-color: #8d5151;}
 
                     <div class= "lupa"> <img src="https://i.ibb.co/6Zc8sfp/lupa.png" alt="alternatetext"></div>
                     <div class ="buscar">
-                    <input type="text" id="unUsuario" onkeyup="buscarUsuario()" placeholder="Busca por nombre" title="Type in a name">
+                    <input type="text" id="unPresupuesto" onkeyup="buscarPresupuesto()" placeholder="Busca por nombre" title="Type in a name">
                     </div>
 
                     <form class="" action="/cargar_egreso" method="post" style="">
@@ -214,7 +216,7 @@ tr:nth-child(even) {background-color: #8d5151;}
 
         <div class= "lupa"> <img src="https://i.ibb.co/6Zc8sfp/lupa.png" alt="alternatetext"></div>
         <div class ="buscar_presu">
-            <input type="text" id="unUsuario" onkeyup="buscarUsuario()" placeholder="Busca por nombre" title="Type in a name"></div>
+            <input type="text" id="unPresupuesto" onkeyup="buscarPresupuesto()" placeholder="Busca por nombre" title="Type in a name"></div>
 
         <form class="" action="/cargar_egreso" method="post" style="">
 
@@ -265,10 +267,310 @@ tr:nth-child(even) {background-color: #8d5151;}
 
         </form>
     </div>
+    <style>
+* {
+  box-sizing: border-box;
+}
 
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+</style>
+    <script>
+function buscarPresupuesto() {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById("unPresupuesto");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("tabla");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[1];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }
+  }
+}
+</script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="/js/GESOC_CargarEgresos.js"></script>
       </div>
 </div>
+
+        <div id="documento" class="tabcontent">
+            <div class="form">
+                <br><h3>Ingrese los documentos</h3></br>
+
+
+                <div class= "lupa"> <img src="https://i.ibb.co/6Zc8sfp/lupa.png" alt="alternatetext"></div>
+                <div class ="buscar_presu">
+                    <input type="text" id="unDocumento" onkeyup="buscarDocumento()" placeholder="Busca por numero" title="Type in a name"></div>
+
+                <form class="" action="/cargar_egreso" method="post" style="">
+
+                    <table class="scroll" id="tablaDocumentos" style="overflow-y:auto;">
+
+                        <thead>
+                        <th><i class="fas fa-user"></i> Id Documento</th>
+                        <th><i class="fas fa-phone"></i>Numero</th>
+                        <th><i class="fas fa-phone"></i> Tipo</th>
+
+                        </thead>
+
+                        <tbody>
+                        {{#each documentos}}
+                            <tr>
+                                <td><i class="fas fa-user"></i> {{id}}</td>
+                                <td>{{numero}}</td>
+                                <td>{{tipo}}</td>
+
+
+                            </tr>
+                        {{/each}}
+                        </tbody>
+                    </table>
+                    <br><br>
+
+                    <div class="field-wrap">
+                        <label>
+                            Id del Documento<span class="req">*</span>
+                        </label>
+                        <input type="text" required autocomplete="off" id="cantidad" name="documento_id"
+                               class="input-datos" />
+                    </div>
+
+                    <h3>¿Desea cargar otro Documento?</h3>
+
+                    <button type="submit" class="button button-back"
+                            onclick="window.location.href='/guardar_documento_egreso'">Sí</button>
+
+                    <div class="field-wrap">
+                        <label>
+                            Id del Presupuesto elegido<span class="req">*</span>
+                        </label>
+                        <input type="text"required autocomplete="off" id="CUIT" name="presupuestoElegido" class="input-datos"/>
+                    </div>
+
+
+                    <button type="submit" class="button button-back" onclick="window.location.href='/usuarios_revisores'">Seguir con usuarios revisores</button>
+
+                </form>
+            </div>
+
+            <style>
+* {
+  box-sizing: border-box;
+}
+
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+</style>
+            <script>
+function buscarDocumento() {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById("unDocumento");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("tablaDocumentos");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[1];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }
+  }
+}
+</script>
+
+        </div>
+
+        <div id="informacion_adicional" class="tabcontent">
+            <div class="form">
+                <br><h3>Ingrese la informacion restante</h3></br>
+
+                <br><h3>Ingrese la entidad</h3></br>
+
+
+                <div class= "lupa"> <img src="https://i.ibb.co/6Zc8sfp/lupa.png" alt="alternatetext"></div>
+                <div class ="buscar_presu">
+                    <input type="text" id="unaEntidad" onkeyup="buscarEntidad()" placeholder="Busca por numero" title="Type in a name"></div>
+
+                <form class="" action="/cargar_egreso" method="post" style="">
+
+                    <table class="scroll" id="tablaEntidad" style="overflow-y:auto;">
+
+                        <thead>
+                        <th><i class="fas fa-user"></i> Id Entidad</th>
+                        <th><i class="fas fa-phone"></i>Nombre Ficticio</th>
+
+                        </thead>
+
+                        <tbody>
+                        {{#each empresas}}
+                            <tr>
+                                <td><i class="fas fa-user"></i> {{id}}</td>
+                                <td>{{nombreFicticio}}</td>
+                            </tr>
+                        {{/each}}
+                        {{#each entidadBases}}
+                            <tr>
+                                <td><i class="fas fa-user"></i> {{id}}</td>
+                                <td>{{nombreFicticio}}</td>
+                            </tr>
+                        {{/each}}
+                        </tbody>
+                    </table>
+                    <br><br>
+
+                    <div class="field-wrap">
+                        <label>
+                            Id de la Entidad<span class="req">*</span>
+                        </label>
+                        <input type="text" required autocomplete="off" id="cantidad" name="entidad_id"
+                               class="input-datos" />
+                    </div>
+
+                    <br><br><h3>Ingrese al Proveedor</h3></br><br>
+
+                    <div class= "lupa"> <img src="https://i.ibb.co/6Zc8sfp/lupa.png" alt="alternatetext"></div>
+                    <div class ="buscar_presu">
+                        <input type="text" id="unProveedor" onkeyup="buscarProveedor()" placeholder="Busca por nombre" title="Type in a name"></div>
+
+                    <form class="" action="/cargar_egreso" method="post" style="">
+
+                        <table class="scroll" id="tablaProveedores" style="overflow-y:auto;">
+
+                            <thead>
+                            <th><i class="fas fa-user"></i> Id Proveedor</th>
+                            <th><i class="fas fa-phone"></i>Nombre</th>
+                            <th><i class="fas fa-phone"></i> Numero</th>
+
+                            </thead>
+
+                            <tbody>
+                            {{#each proveedores}}
+                                <tr>
+                                    <td><i class="fas fa-user"></i> {{id}}</td>
+                                    <td>{{nombre}}</td>
+                                    <td>{{numeroID}}</td>
+                                </tr>
+                            {{/each}}
+                            </tbody>
+                        </table>
+                        <br><br>
+
+                        <div class="field-wrap">
+                            <label>
+                                Id del Proveedor<span class="req">*</span>
+                            </label>
+                            <input type="text" required autocomplete="off" id="cantidad" name="proveedor_id"
+                                   class="input-datos" />
+                        </div>
+
+                        <br><br><h3>Ingrese el Medio de Pago</h3></br><br>
+
+                        <div class="field-wrap">
+                            <div class="custom-select" style="width:200px;">
+                                <select name="tipoDePago" id="tipoDePago" onChange=changetextbox()>
+                                    <option value="0">Seleccione el medio de pago:</option>
+                                    <option value="1">Tarjeta de credito</option>
+                                    <option value="2">Tarjeta de debito</option>
+                                    <option value="3">Ticket</option>
+                                    <option value="4">ATM</option>
+                                    <option value="5">Efectivo</option>
+                                </select>
+
+                            </div>
+                        </div>
+
+                </form>
+            </div>
+
+            <style>
+* {
+  box-sizing: border-box;
+}
+
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+</style>
+            <script>
+function buscarEntidad() {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById("unaEntidad");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("tablaEntidad");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[1];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }
+  }
+}
+
+function buscarProveedor() {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById("unProveedor");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("tablaProveedores");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[1];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }
+  }
+}
+</script>
+        </div>
+
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="/js/GESOC_CargarEgresos.js"></script>
+
+
     </body>
 
     <script>openCity(event, 'agregar producto')
