--- a/TPGESOC/src/main/resources/public/css/GESOC_Bitacora.css
+++ b/TPGESOC/src/main/resources/public/css/GESOC_Bitacora.css
@@ -8,7 +8,7 @@ html {
 
 body {
   background: #618385;
-  background-image: url("https://brandsmakers.advertroindia.co.in/uploads-advertro-03-08-2019/brandsmakers/updates/516/google-promotion.jpg");
+  background-image: url("https://i.ibb.co/b1cJBbG/Sin-t-tulo.png");
   /*background-repeat: no-repeat;*/
   font-family: 'Titillium Web', sans-serif;
 }
@@ -24,7 +24,7 @@ a:hover {
 }
 
 .form {
-  background: #F4B74D;
+  background: #D07289;
   padding: 50px;
   padding-top: 30px;
   max-width: 600px;
@@ -93,7 +93,7 @@ table {
 th {
     height: 30px;
     width: 50px;
-    background-color: #B1A752;
+    background-color: #62B3B6;
     text-align: center;
 }
 
@@ -112,7 +112,7 @@ table, th, td {
     font-size: 13px;
     border-collapse: collapse;
     border-width: 3px;
-    border-color:#F45D40;
+    border-color:#4A5B93;
   }
 
 label {
@@ -148,21 +148,21 @@ label.highlight {
 
 input, textarea {
   font-size: 22px;
-  display: inline;
-  width: 90%;
+  display: block;
+  width: 100%;
   height: 100%;
   padding: 5px 10px;
   background: none;
   background-image: none;
   border: 1px solid #000000;
-  color: #ffffff;
+  color: #000000;
   border-radius: 0;
   -webkit-transition: border-color .25s ease, box-shadow .25s ease;
   transition: border-color .25s ease, box-shadow .25s ease;
 }
 input:focus, textarea:focus {
   outline: 0;
-  border-color: #F45D40;
+  border-color: #4A5B93;
 }
 
 textarea {
@@ -173,7 +173,7 @@ textarea {
 .field-wrap {
   position: relative;
   margin-bottom: 25px;
-  color: #222;
+  color: #000000;
   border-color: #000000;
 }
 
@@ -201,7 +201,7 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background:#CF4F44;
+  background:#4A5B93;
   color: #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
@@ -245,7 +245,7 @@ textarea {
     border-color: #85c3e5;
     border-width: thick;
     color: #ffffff;
-    background-color:#F45D40;
+    background-color:#5DABB4;
     cursor: pointer;
 }
 
@@ -313,7 +313,7 @@ textarea {
 
 .navbar-default {
   border-color: transparent;
-  background-color: #222;
+  background-color: #000000;
 }
 
 .navbar-default .navbar-brand {
