--- a/TPGESOC/src/main/resources/templates/GESOC_VincularIngresoAProyecto.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_VincularIngresoAProyecto.hbs
@@ -32,7 +32,7 @@
 
                 <h3>Visualice los proyectos existentes</h3>
 
-                <form class="" action="/cargar_egreso" method="post" style="">
+                <form class="" action="/vincular" method="post" style="">
                     <div id="div1">
                         <table class="scroll" id="tablaProyecto" style="overflow-y:auto;">
                             <thead>
@@ -60,7 +60,7 @@
                     <h3>Visualice los Ingresos existentes</h3>
 
 
-                    <form class="" action="/cargar_egreso" method="post" style="">
+                    <form class="" action="/vincular" method="post" style="">
                         <div id="div1">
                             <table class="scroll" id="tablaIngreso" style="overflow-y:auto;">
                                 <thead>
@@ -101,17 +101,50 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="button button-back"
-                            onclick="window.location.href='./'">Vincular</button>
+                        <button type="submit" id="myBtn" class="button button-back"
+                            onclick="window.location.href=">Vincular</button>
+
+                        <div id="myModal" class="modal">
+
+                            <!-- Modal content -->
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <p>Su proyecto se ha creado con éxito</p>
+                                <button type="mybtn" class="button button-modal"
+                                    onclick="window.location.href='/confirmar_asociacion_prod_cate'">OK</button>
+                            </div>
+                        </div>
 
 
             </div>
 
             <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'>
+                var modal = document.getElementById("myModal");
+
+                // Get the button that opens the modal
+                var btn = document.getElementById("myBtn");
+
+                // Get the <span> element that closes the modal
+                var span = document.getElementsByClassName("close")[0];
+
+                // When the user clicks the button, open the modal 
+                btn.onclick = function () {
+                    modal.style.display = "block";
+                }
+
+                // When the user clicks on <span> (x), close the modal
+                span.onclick = function () {
+                    modal.style.display = "none";
+                    window.location.href = './'
+                }
+
+                // When the user clicks anywhere outside of the modal, close it
+                window.onclick = function (event) {
+                    if (event.target == modal) {
+                    }
+                }
             </script>
             <script src="/js/GESOC_VincularIngresoAProyecto.js"></script>
-
-
         </div>
     </div>
 </body>
