--- a/TPGESOC/src/main/resources/templates/GESOC_VincularIngresoAProyecto.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_VincularIngresoAProyecto.hbs
@@ -29,10 +29,10 @@
 
         <div class="tab-content">
             <div id="compra">
+                <form class="" action="/vincular_proy" method="post" style="">
 
                 <h3>Visualice los proyectos existentes</h3>
 
-                <form class="" action="/vincular" method="post" style="">
                     <div id="div1">
                         <table class="scroll" id="tablaProyecto" style="overflow-y:auto;">
                             <thead>
@@ -59,8 +59,6 @@
 
                     <h3>Visualice los Ingresos existentes</h3>
 
-
-                    <form class="" action="/vincular" method="post" style="">
                         <div id="div1">
                             <table class="scroll" id="tablaIngreso" style="overflow-y:auto;">
                                 <thead>
@@ -86,6 +84,8 @@
 
                         <h3>Ingrese el ID del proyecto que desea vincular y el ID del ingreso a cual desea vincularlo
                         </h3>
+
+
 
                         <div class="top-row">
                             <div class="field-wrap">
@@ -120,6 +120,7 @@
 
             </div>
 
+
             <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'>
                 var modal = document.getElementById("myModal");
 
@@ -148,6 +149,7 @@
             </script>
             <script src="/js/GESOC_VincularIngresoAProyecto.js"></script>
         </div>
+        </form>
     </div>
 </body>
 
